tests/ui/tuple/tuple-struct-fields/test2.stderr
error: expected one of `)` or `,`, found `(`
  --> $DIR/test2.rs:5:26
   |
LL | / macro_rules! define_struct {
LL | |     ($t:ty) => {
LL | |         struct S1(pub $t);
LL | |         struct S2(pub (in foo) ());
LL | |         struct S3(pub $t ());
   | |                         -^ expected one of `)` or `,`
   | |                         |
   | |                         help: missing `,`
LL | |
LL | |     }
LL | | }
   | |_- in this expansion of `define_struct!`
...
LL |       define_struct! { (foo) }
   |       ------------------------ in this macro invocation

error[E0412]: cannot find type `foo` in this scope
  --> $DIR/test2.rs:11:23
   |
LL |     define_struct! { (foo) }
   |                       ^^^ not found in this scope

error[E0412]: cannot find type `foo` in this scope
  --> $DIR/test2.rs:11:23
   |
LL |     define_struct! { (foo) }
   |                       ^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
